Moving updates to big thick GPU for training langauge tasks

--- a/Instruction_Parse.ipynb
+++ b/Instruction_Parse.ipynb
@@ -264,6 +264,34 @@
     "ax.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "My current philosophy is that in order for my agent to make the right decisions it needs to know about three things: The graph (The environment), the action, and the action arguments. The current approach to is to format action as selection. Selection of a node in the graph. Selection is done by giving a value to each node based on the node representation (often includes neighbouring features with a GCN), the instruction's action, and the instruction's arguments. Extracting the action and arguments from instruction text is my current challenge. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instruction Parsing Model A\n",
+    "\n",
+    "# References:\n",
+    "# > LSTM based NER model, and other NLP tasks\n",
+    "# > \n",
+    "\n",
+    "class InstructionNet():\n",
+    "    def __init__(self):\n",
+    "        super(InstructionNet, self).__init__()\n",
+    "        pass\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        pass"
+   ]
   }
  ],
  "metadata": {
