--- a/Instruction_Parse.ipynb
+++ b/Instruction_Parse.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of actions + <unk> / <pad>??: 10\n",
+      "Number of actions 8 + <unk> / <pad>??: 10\n",
       "Action vocab freqs: {'GotoLocation': 67904, 'PickupObject': 30852, 'PutObject': 28489, 'SliceObject': 3047, 'CoolObject': 2950, 'HeatObject': 2943, 'CleanObject': 2842, 'ToggleObject': 2251}\n"
      ]
     },
@@ -286,24 +286,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([7, 1, 300])\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-142-c462fe9f5b84>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     43\u001b[0m     \u001b[0minstruction_nums\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mINSTRUCTION\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnumericalize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mbatch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minstruction\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mINSTRUCTION\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvocab\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvectors\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0minstruction_nums\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 45\u001b[1;33m     \u001b[1;32massert\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
     }
    ],
    "source": [
@@ -345,9 +327,39 @@
     "plt.xticks(rotation=45)\n",
     "fig.tight_layout()\n",
     "ax.legend()\n",
-    "plt.show()\n",
-    "\n",
-    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training data samples: 141278\n",
+      "torch.Size([7, 1, 300])\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-144-b719265621ac>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0minstruction_nums\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mINSTRUCTION\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnumericalize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mbatch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minstruction\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mINSTRUCTION\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvocab\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvectors\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0minstruction_nums\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[1;32massert\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "print('Training data samples:', len(train))\n",
+    "# Testing for batching\n",
     "for batch in train:\n",
     "    instruction_nums = INSTRUCTION.numericalize([batch.instruction])\n",
     "    print(INSTRUCTION.vocab.vectors[instruction_nums].shape)\n",
@@ -530,6 +542,76 @@
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
     "model = InstructionAction(dim_in=node_repr_dim, dim_out=3).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Riordan\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:35: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.3315, -0.3476, -0.5499],\n",
+      "        [-0.3315, -0.3476, -0.5499],\n",
+      "        [-0.3315, -0.3476, -0.5499],\n",
+      "        [-0.3315, -0.3476, -0.5499]], grad_fn=<AddmmBackward>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Attention Mechanism\n",
+    "# Based on the Transformer MultiHeaded Attention Mechansim\n",
+    "import math\n",
+    "\n",
+    "# Todo:\n",
+    "# - Positional encoding required\n",
+    "\n",
+    "class Attention(nn.Module):\n",
+    "    def __init__(self, dim_in=300):\n",
+    "        super(Attention, self).__init__()\n",
+    "        # Query\n",
+    "        self.query_fc = nn.Linear(dim_in, dim_in)\n",
+    "        \n",
+    "        # Key\n",
+    "        self.key_fc = nn.Linear(dim_in, dim_in)\n",
+    "        \n",
+    "        # Value\n",
+    "        self.value_fc = nn.Linear(dim_in, dim_in)\n",
+    "        \n",
+    "        # Output\n",
+    "        self.output_fc = nn.Linear(dim_in, dim_in)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        query = self.query_fc(x)\n",
+    "        key = self.key_fc(x)\n",
+    "        value = self.value_fc(x)\n",
+    "\n",
+    "        # Construct Attention matrix\n",
+    "        attention_matrix = torch.mm(query,key.t())\n",
+    "\n",
+    "        # Scale-down attention matrix to \"soften\" the previous mm. This stabilises gradients\n",
+    "        attention_matrix = attention_matrix / math.sqrt(x.shape[0])\n",
+    "        \n",
+    "        # Compute attention probabilities\n",
+    "        attention_matrix = torch.nn.functional.softmax(attention_matrix)\n",
+    "        \n",
+    "        # Apply attention matrix to value tensor\n",
+    "        x = torch.mm(attention_matrix, value)\n",
+    "        \n",
+    "        x = self.output_fc(x)\n",
+    "        return x\n",
+    "        \n",
+    "attn = Attention(3)\n",
+    "print(attn(torch.zeros(4,3)))"
    ]
   }
  ],
