ML GOAP Added. This python implimentation of GOAP works and will serve as a reference for additions. A C++ implimentation would also be valuable for Pytorch C++ and Godot.

--- a/Instruction_Parse.ipynb
+++ b/Instruction_Parse.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,70 +86,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13670ad477554f2bb265becd70a49a3a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=6574), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "\r",
+      "  0%|                                                 | 0/6574 [00:00<?, ?it/s]"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f5a1af1c0234464a699b451efb1d5f5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=251), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "{'dirty_and_empty': False, 'floor_plan': 'FloorPlan301', 'init_action': {'action': 'TeleportFull', 'horizon': 30, 'rotateOnTeleport': True, 'rotation': 0, 'x': -0.75, 'y': 0.9009992, 'z': -1.25}, 'object_poses': [{'objectName': 'Mug_2a940808', 'position': {'x': 1.83983088, 'y': 0.793715239, 'z': -1.153574}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'TissueBox_00aeed40', 'position': {'x': 1.98229468, 'y': 0.350982755, 'z': -1.21802711}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'TissueBox_00aeed40', 'position': {'x': 1.94679868, 'y': 0.570882738, 'z': -1.21802711}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'CD_f25640ea', 'position': {'x': 1.5244391, 'y': 0.7954197, 'z': -1.41259813}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'CD_f25640ea', 'position': {'x': -1.26610649, 'y': 0.6755154, 'z': -0.954516351}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'CellPhone_b9003495', 'position': {'x': -0.8068642, 'y': 0.5663049, 'z': 0.358137846}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'CellPhone_b9003495', 'position': {'x': -0.2898885, 'y': 0.5663049, 'z': 1.0914166}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'Pencil_89afc677', 'position': {'x': 1.75862527, 'y': 0.8060935, 'z': -1.38517547}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'CreditCard_80d98dab', 'position': {'x': -1.26492822, 'y': 0.106152132, 'z': -0.5800813}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'CreditCard_80d98dab', 'position': {'x': 2.79416656, 'y': 0.12677227, 'z': -1.27470613}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'KeyChain_7bb65943', 'position': {'x': -1.29335022, 'y': 0.105569914, 'z': -0.953092933}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'KeyChain_7bb65943', 'position': {'x': -1.35281718, 'y': 1.233747, 'z': -0.745}, 'rotation': {'x': 0.0, 'y': 270.0, 'z': 0.0}}, {'objectName': 'AlarmClock_a68436a8', 'position': {'x': -1.35281718, 'y': 1.2357502, 'z': -0.6493938}, 'rotation': {'x': 0.0, 'y': 90.0, 'z': 0.0}}, {'objectName': 'Book_c3876352', 'position': {'x': -0.902, 'y': 0.5744, 'z': 1.179}, 'rotation': {'x': 0.0, 'y': 332.922272, 'z': 0.0}}, {'objectName': 'Box_32219d9d', 'position': {'x': 2.7342, 'y': 0.195, 'z': 0.89}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'Laptop_acb78e08', 'position': {'x': -0.5, 'y': 0.56, 'z': 0.286}, 'rotation': {'x': 0.0, 'y': 63.46487, 'z': 0.0}}, {'objectName': 'CellPhone_b9003495', 'position': {'x': -0.117563307, 'y': 0.5663049, 'z': 0.6025641}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'BaseballBat_7de4b683', 'position': {'x': 2.847, 'y': 0.643, 'z': 1.838}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 335.1118}}, {'objectName': 'BasketBall_7b5f2c88', 'position': {'x': 1.01984191, 'y': 0.3307791, 'z': -0.977466643}, 'rotation': {'x': 346.775848, 'y': 295.617249, 'z': 1.02139926}}, {'objectName': 'TissueBox_00aeed40', 'position': {'x': -1.29435253, 'y': 0.677880645, 'z': -0.543508649}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'CreditCard_80d98dab', 'position': {'x': 1.96231079, 'y': 1.04736793, 'z': -1.40308774}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'AlarmClock_a68436a8', 'position': {'x': 1.651802, 'y': 0.7965486, 'z': -1.28207183}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'Pencil_89afc677', 'position': {'x': 2.5919466, 'y': 0.7981409, 'z': -1.153574}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'Boots_dc0ae5c1', 'position': {'x': -1.27998614, 'y': 0.0006508231, 'z': -1.34300911}, 'rotation': {'x': 359.9876, 'y': 27.1430378, 'z': 359.993652}}, {'objectName': 'Pillow_419db2d8', 'position': {'x': -0.634, 'y': 0.63, 'z': 1.6116}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'KeyChain_7bb65943', 'position': {'x': -1.21362484, 'y': 1.233747, 'z': -0.9362124}, 'rotation': {'x': 0.0, 'y': 90.0, 'z': 0.0}}, {'objectName': 'Bowl_600fd48d', 'position': {'x': 2.451, 'y': 0.788715243, 'z': -1.20707834}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'Watch_0f7be4f9', 'position': {'x': -1.283221, 'y': 1.23518956, 'z': -0.8406062}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'CD_f25640ea', 'position': {'x': 1.651802, 'y': 0.7944067, 'z': -1.153574}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'Pen_d94967db', 'position': {'x': 2.69193268, 'y': 1.05037677, 'z': -1.36826336}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}, {'objectName': 'Mug_2a940808', 'position': {'x': 2.21588874, 'y': 0.793715239, 'z': -1.153574}, 'rotation': {'x': 0.0, 'y': 180.0, 'z': 0.0}}, {'objectName': 'Statue_e0075340', 'position': {'x': 1.823921, 'y': 1.036511, 'z': -1.419659}, 'rotation': {'x': 0.0, 'y': 0.0, 'z': 0.0}}], 'object_toggles': [{'isOn': False, 'objectType': 'DeskLamp'}], 'random_seed': 2173692118, 'scene_num': 301}\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e00641fcb09440d95bd0509b0606624",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=483), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "  0%|                                                 | 0/6574 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-6c10c228d70b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     20\u001b[0m                     \u001b[0mtsv_writer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriterow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m \u001b[0mload_alfred_json_folder\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'train'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mALFRED_TRAIN_INSTRUCTION_TSV_FILENAME\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     23\u001b[0m \u001b[0mload_alfred_json_folder\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'valid_seen'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mALFRED_VALIDATION_INSTRUCTION_TSV_FILENAME\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-4-6c10c228d70b>\u001b[0m in \u001b[0;36mload_alfred_json_folder\u001b[1;34m(alfred_json_folder, output_tsv)\u001b[0m\n\u001b[0;32m     13\u001b[0m             \u001b[0mactions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'plan'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'high_pddl'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'scene'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m             \u001b[1;32massert\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0md\u001b[0m \u001b[1;32min\u001b[0m \u001b[0minstructions\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m                 \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'high_descs'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
      ]
     }
    ],
@@ -163,10 +134,14 @@
     "    # Preprocess ALFRED training data, only run once.\n",
     "    with open(output_tsv, 'wt', newline='', encoding='utf-8') as out_file:\n",
     "        tsv_writer = csv.writer(out_file, delimiter='\\t')\n",
-    "        for json_file_idx in tqdm.notebook.tqdm(range(len(train_json_files))):\n",
+    "        for json_file_idx in tqdm.tqdm(range(len(train_json_files))):\n",
     "            data = json.load(open(train_json_files[json_file_idx]))\n",
     "            instructions = data['turk_annotations']['anns']\n",
     "            actions = data['plan']['high_pddl']\n",
+    "            print(data['scene'])\n",
+    "            \n",
+    "            assert False\n",
+    "            \n",
     "            for d in instructions:\n",
     "                for i in range(len(d['high_descs'])):\n",
     "                    row = [json_file_idx, d['task_desc'], i, d['high_descs'][i], actions[i]['discrete_action']['action']]\n",
@@ -590,10 +565,10 @@
     "        # Output\n",
     "        self.output_fc = nn.Linear(dim_in, dim_in)\n",
     "    \n",
-    "    def forward(self, x):\n",
-    "        query = self.query_fc(x)\n",
-    "        key = self.key_fc(x)\n",
-    "        value = self.value_fc(x)\n",
+    "    def forward(self, k, q, v):\n",
+    "        query = self.query_fc(q)\n",
+    "        key = self.key_fc(k)\n",
+    "        value = self.value_fc(v)\n",
     "\n",
     "        # Construct Attention matrix\n",
     "        attention_matrix = torch.mm(query,key.t())\n",
@@ -612,6 +587,46 @@
     "        \n",
     "attn = Attention(3)\n",
     "print(attn(torch.zeros(4,3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Graph transformer auto encoder\n",
+    "\n",
+    "class TextGraph(nn.Module):\n",
+    "    \"\"\"\n",
+    "    TextGraph\n",
+    "    Text -> Graph -> Text\n",
+    "    \"\"\"\n",
+    "    def __init__(self, dim_in):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Meeting Todo:\n",
+    "Nikos conversation:<br>\n",
+    "- You should work with vib's code to make a baseline instruction parser that simply does the dot product between the word vectors and each node in the graph. Then score the landmark nodes based on how much themselves and their affordances are similar to the instruction. This is a good benchmark from which to add some ATTENTION!\n",
+    "\n",
+    "Vibs conversation:<br>\n",
+    "- Niko's recommended baseline is nice but what about a baseline that justifies the graph? or the word vectors? Perhaps we need to make three baselines, niko's, an image convolution one, and a one-hot encoded word vector one.\n",
+    "\n",
+    "My excitment:<br>\n",
+    "- I understand how we can apply transformer style attention to this problem. The multi-headed attention unit works by computing attention between a key and a query then projecting it against the value. Here our query is a window sized sample of instruction word embeddings (FastText wordvecs) and an equal sized key and value of node feature vectors (Also FastText wordvecs + GCN)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conversational Agent Datasets\n",
+    "[15 Best Chatbot Datasets for Machine Learning](https://lionbridge.ai/datasets/15-best-chatbot-datasets-for-machine-learning/)\n"
    ]
   }
  ],
