Added interactive baseline

--- a/thorEnvironment.ipynb
+++ b/thorEnvironment.ipynb
@@ -372,6 +372,18 @@
     "            obj = next(self.graph.predecessors(idx))\n",
     "            objectId = self.graph.nodes[obj]['data']['objectId']\n",
     "            event = self.controller.step(dict(action='HeatObject', objectId=objectId))  \n",
+    "        # +++++++++\n",
+    "        elif self.graph.nodes[idx]['affordance'] == 'cool':                 \n",
+    "            # which object are we trying to cool?\n",
+    "            obj = next(self.graph.predecessors(idx))\n",
+    "            objectId = self.graph.nodes[obj]['data']['objectId']\n",
+    "            event = self.controller.step(dict(action='CoolObject', objectId=objectId))  \n",
+    "        # +++++++++\n",
+    "        elif self.graph.nodes[idx]['affordance'] == 'clean':                 \n",
+    "            # which object are we trying to clean?\n",
+    "            obj = next(self.graph.predecessors(idx))\n",
+    "            objectId = self.graph.nodes[obj]['data']['objectId']\n",
+    "            event = self.controller.step(dict(action='CleanObject', objectId=objectId)) \n",
     "        # +++++++++       \n",
     "        elif self.graph.nodes[idx]['affordance'] == 'toggle':                 \n",
     "            raise NotImplementedError        \n",
