Moving more code into utils.py, added a gitignore

--- a/Interactive_Baseline.ipynb
+++ b/Interactive_Baseline.ipynb
@@ -23,62 +23,12 @@
    ],
    "source": [
     "# Transforming the ALFRED dataset\n",
-    "import tqdm\n",
-    "import glob\n",
-    "import json\n",
-    "import sys\n",
-    "import torchtext\n",
-    "from torchtext.data import get_tokenizer\n",
+    "from utils import *\n",
     "\n",
-    "COMPUTER = 'MAC'\n",
-    "PC_ALFRED_DATA = 'D:\\\\Datasets\\\\alfred\\\\data\\\\ALFRED_json_2.1.0\\\\'\n",
-    "LAPTOP_ALFRED_DATA = '../datasets/alfred/data/ALFRED_json_2.1.0/' #Using the json data because image features arent used yet...\n",
-    "JSON_PATH = '/*/*/*.json'\n",
-    "if COMPUTER == 'PC':\n",
-    "    JSON_PATH = JSON_PATH.replace('/','\\\\')\n",
-    "TEST_JSON_PATH = '/*/*.json'\n",
-    "if COMPUTER == 'PC':\n",
-    "    TEST_JSON_PATH = TEST_JSON_PATH.replace('/','\\\\')\n",
-    "ALFRED_TRAIN_INSTRUCTION_TSV_FILENAME = 'ALFRED_Train_InstActionArgs.tsv'\n",
-    "ALFRED_VALIDATION_INSTRUCTION_TSV_FILENAME = 'ALFRED_Validation_InstActionArgs.tsv'\n",
-    "ALFRED_TEST_INSTRUCTION_TSV_FILENAME = 'ALFRED_Test_InstActionArgs.tsv'\n",
-    "\n",
-    "def load_next_alfred_data(alfred_json_folder):\n",
-    "    # Get list of all instructions and their trajectories\n",
-    "    # glob.glob gets all files and stores them. iglob makes an iterator.\n",
-    "    ALFRED_PATH = (PC_ALFRED_DATA if COMPUTER == 'PC' else LAPTOP_ALFRED_DATA) + alfred_json_folder\n",
-    "    train_json_files = glob.glob(ALFRED_PATH + JSON_PATH)\n",
-    "    tokenizer = get_tokenizer(\"basic_english\")\n",
-    "    dataset = []\n",
-    "    \n",
-    "    # Yeild an alfred json\n",
-    "    for json_file_idx in tqdm.tqdm(range(len(train_json_files))):\n",
-    "        data = json.load(open(train_json_files[json_file_idx]))\n",
-    "        annotations = data['turk_annotations']['anns']\n",
-    "        actions = data['plan']['high_pddl']\n",
-    "        scene = data['scene']\n",
-    "        scene['task_id'] = data['task_id']\n",
-    "        \n",
-    "        instruction_actions = []\n",
-    "        for d in annotations:\n",
-    "            votes = d['votes']\n",
-    "            if all(votes): # WARNING: Limiting dataset based on votes\n",
-    "                trajectory = {'task_desc': [], 'instructions': []}\n",
-    "                trajectory['task_desc'] = d['task_desc']\n",
-    "                for i in range(len(d['high_descs'])):\n",
-    "                    instruction = {'instruction': tokenizer(d['high_descs'][i]), 'action': actions[i]['discrete_action']['action'],\n",
-    "                                   'argument_1': actions[i]['discrete_action']['args'][0] if 0 < len(actions[i]['discrete_action']['args']) else '<unk>', \n",
-    "                                   'argument_2': actions[i]['discrete_action']['args'][1] if 1 < len(actions[i]['discrete_action']['args']) else '<unk>'}\n",
-    "                    trajectory['instructions'].append(instruction)\n",
-    "                instruction_actions.append(trajectory)\n",
-    "\n",
-    "        if len(instruction_actions) > 0:\n",
-    "            dataset.append((instruction_actions, scene))\n",
-    "    return dataset\n",
-    "\n",
-    "train_dataset = load_next_alfred_data('train')\n",
+    "ALFRED_JSON_PATTERN = '../datasets/alfred/data/ALFRED_json_2.1.0/train/*/*/*.json' \n",
+    "train_dataset = load_next_alfred_data(ALFRED_JSON_PATTERN)\n",
     "print('train dataset size: ', len(train_dataset))\n",
-    "print('%3f kb' % (sys.getsizeof(train_dataset) / 1024.0))\n"
+    "print('%3f kb' % (sys.getsizeof(train_dataset) / 1024.0))"
    ]
   },
   {
@@ -188,98 +138,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[-1.2735],\n",
-       "         [ 2.4047],\n",
-       "         [ 1.7407],\n",
-       "         [-0.3381]]),\n",
-       " [tensor(1),\n",
+       "(tensor([[ 0.5601],\n",
+       "         [ 0.5579],\n",
+       "         [-0.4076],\n",
+       "         [ 0.8928]]),\n",
+       " [tensor(0),\n",
        "  tensor(1),\n",
-       "  tensor(1),\n",
+       "  tensor(3),\n",
        "  tensor(0),\n",
-       "  tensor(2),\n",
-       "  tensor(2),\n",
        "  tensor(3),\n",
        "  tensor(2),\n",
+       "  tensor(0),\n",
+       "  tensor(0),\n",
        "  tensor(2),\n",
-       "  tensor(1)])"
+       "  tensor(3)])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "from torch_geometric.nn import GCNConv\n",
-    "from torch.nn import Linear\n",
+    "from models import *\n",
     "\n",
-    "def graph_word_scores(instruction, scores):\n",
-    "    print(instruction)\n",
-    "    print(scores)\n",
-    "\n",
-    "# ==================================================\n",
-    "class DotNet(torch.nn.Module):\n",
-    "    def __init__(self, one_hot=False):\n",
-    "        super(DotNet, self).__init__()\n",
-    "        self.one_hot = one_hot\n",
-    "        self.OPTION = 1\n",
-    "        self.cos = nn.CosineSimilarity(dim=1, eps=1e-6)\n",
-    "        if self.OPTION == 3:\n",
-    "            self.GCN = GCNConv(300, 64)\n",
-    "        \n",
-    "    def forward(self, data, target):\n",
-    "        '''\n",
-    "        DotNet scores each node based upon the scores it recieves for each word in the instruction.\n",
-    "        I have three ideas for how to deal with non-location nodes:\n",
-    "        - 1 [Simplest] Ignore them, compute scores (dot product) between each word vector and each node feature vector\n",
-    "        then sum all the scores to produce a final score for each node. (This is naive but a good place to start)\n",
-    "        - 2 [Hardest] Compute scores for each node feature then add non-location nodes score to parents\n",
-    "        - 3 [Weird] Use a GCN to learn how to combine the node features, then compute scores on those features.\n",
-    "        Because this approach has some learning it isnt comparable to the last two but IS comparable to niko's target\n",
-    "        net. It'll be proving the efficacy of the linear layers that combine target and node features. \n",
-    "        '''\n",
-    "        x, edge_index = data.x, data.edge_index\n",
-    "        max_affordances = []\n",
-    "        \n",
-    "        if self.one_hot:\n",
-    "            # Convert indices to one-hot encoding\n",
-    "            max_vector = torch.argmax(torch.cat([x,target]))\n",
-    "            num_vectors = x.shape[0]\n",
-    "            x_one_hot = torch.zeros(num_vectors, max_vector)\n",
-    "            x_one_hot[torch.arange(num_vectors), x.flatten()] = 1.0\n",
-    "            \n",
-    "            target = target.long()\n",
-    "            num_vectors = target.shape[0]\n",
-    "            target_one_hot = torch.zeros(num_vectors, max_vector)\n",
-    "            target_one_hot[torch.arange(num_vectors), target.flatten()] = 1.0\n",
-    "        \n",
-    "        if self.OPTION == 1:\n",
-    "            scores = torch.zeros(x.shape[0], dtype=torch.float32)\n",
-    "            for word in target:\n",
-    "                word = word.expand_as(x)\n",
-    "                word_score = self.cos(x, word)\n",
-    "                max_affordance = torch.argmax(word_score)\n",
-    "                max_affordances.append(max_affordance)\n",
-    "                scores += word_score\n",
-    "            x = scores.view(-1,1)\n",
-    "        elif self.OPTION == 2:\n",
-    "            pass\n",
-    "        elif self.OPTION == 3:\n",
-    "            pass\n",
-    "\n",
-    "        return x, max_affordances\n",
-    "\n",
-    "\n",
-    "m = DotNet()\n",
+    "m = CosineModel()\n",
     "class T:\n",
     "    x = torch.randn(4,10)\n",
     "    edge_index = torch.randn(2, 4)\n",
@@ -935,31 +824,6 @@
     "#plt.title('Environment 25 - All Task Success Rate (%d Instructions)' % len(success))\n",
     "#if save_figures:\n",
     "#    plt.savefig('dotnet(cosine,no punc,no unfound object graphs)-environment25-full_trajectories-pickup-success-rate.pdf', dpi=300, bbox_inches='tight')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ai2thor.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.zeros(100).view(-1, 1).shape"
    ]
   },
   {
