--- a/scene_graph.ipynb
+++ b/scene_graph.ipynb
@@ -83,7 +83,7 @@
     "        return self.node_counter-1\n",
     "    # =================================================================================== \n",
     "    def word2vec(self, word):\n",
-    "        if one_hot:\n",
+    "        if self.one_hot:\n",
     "            if not word in self.vocab:\n",
     "                self.vocab_size += 1\n",
     "                self.vocab[word] = self.vocab_size\n",
