Working on reading in all ALFRED data

--- a/scene_graph.ipynb
+++ b/scene_graph.ipynb
@@ -39,14 +39,30 @@
     "#         self._word_vec = __word_vec__.get_vecs_by_token if word_vec is None else word_vec\n",
     "        self.init_word_vec()\n",
     "    \n",
-    "        self._translate_unknown_words = {'stoveburner':'stove',\n",
-    "                                         'stoveknob':'knob',\n",
-    "                                        'sinkbasin':'sink',\n",
-    "                                        'garbagecan':'garbage',\n",
-    "                                        'soapbottle':'soap',\n",
-    "                                        'coffeemachine':'coffee',\n",
-    "                                        'dishsponge':'sponge',\n",
-    "                                        'peppershaker':'pepper'} \n",
+    "        self._translate_unknown_words = {'stoveburner': ['stove', 'burner'],\n",
+    "                                         'stoveknob': ['stove', 'knob'],\n",
+    "                                        'sinkbasin': ['sink', 'basin'],\n",
+    "                                        'garbagecan': ['garbage', 'can'],\n",
+    "                                        'soapbottle': ['soap', 'bottle'],\n",
+    "                                        'coffeemachine': ['coffee', 'machine'],\n",
+    "                                        'dishsponge': ['dish', 'sponge'],\n",
+    "                                        'peppershaker': ['pepper', 'shaker'],\n",
+    "                                        'spraybottle': ['spray', 'bottle'],\n",
+    "                                        'glassbottle' : ['glass', 'bottle'],\n",
+    "                                        'butterknife' : ['butter', 'knife'],\n",
+    "                                        'papertowelroll': ['paper', 'towel', 'roll'],\n",
+    "                                        'winebottle': ['wine', 'bottle'],\n",
+    "                                        'floorlamp': ['floor', 'lamp'],\n",
+    "                                        'diningtable': ['dining', 'table'],\n",
+    "                                        'showercurtain' : ['shower', 'curtain'],\n",
+    "                                        'bathtubbasin' : ['bathtub', 'basin'],\n",
+    "                                        'toiletpaperhanger' : ['toilet', 'paper', 'hanger'],\n",
+    "                                        'towelholder' : ['towel', 'holder'],\n",
+    "                                        'breadsliced' : ['bread', 'slice'],\n",
+    "                                        'wateringcan' : ['water', 'can'],\n",
+    "                                        'tvstand' : ['tv', 'stand'],\n",
+    "                                        'tissuebox' : ['tissue', 'box'],\n",
+    "                                        'desklamp' : ['desk', 'lamp']} \n",
     "        self.setup()\n",
     "        \n",
     "    # =================================================================================== \n",
@@ -90,10 +106,12 @@
     "            return np.array([self.vocab[word]])\n",
     "        else:\n",
     "            if word in self._translate_unknown_words:\n",
-    "                word = self._translate_unknown_words[word]\n",
-    "\n",
-    "    #         representation = self._word_vec.get_vecs_by_tokens(word, True).numpy()\n",
-    "            representation = self.get_word_vec(word, True).numpy()\n",
+    "                word_set = self._translate_unknown_words[word]\n",
+    "                representations = self.get_word_vec(word_set, True)\n",
+    "                representation = torch.mean(representations, dim=0)\n",
+    "            else:\n",
+    "                #representation = self._word_vec.get_vecs_by_tokens(word, True).numpy()\n",
+    "                representation = self.get_word_vec(word, True).numpy()\n",
     "\n",
     "            if not np.sum(np.abs(representation)) > 0:\n",
     "                print('zero word: %s' % word)\n",
