Now compressing environments with gzip extension. 123 graphs now pickle to 40mb. Now running AI2THOR headless! TODO: Move 2.1.0 -> 2.4.0. Consider ALFRED branch. Current task: Investigating a 10% drop in performance on FloorPlan25 test subset (n=123)

--- a/scene_graph.ipynb
+++ b/scene_graph.ipynb
@@ -13,6 +13,7 @@
     "import torchtext\n",
     "import pickle\n",
     "import matplotlib.pyplot as plt\n",
+    "import os\n",
     "\n",
     "try:\n",
     "    __word_vec__\n",
@@ -62,14 +63,15 @@
     "                                        'wateringcan' : ['water', 'can'],\n",
     "                                        'tvstand' : ['tv', 'stand'],\n",
     "                                        'tissuebox' : ['tissue', 'box'],\n",
-    "                                        'desklamp' : ['desk', 'lamp']} \n",
+    "                                        'desklamp' : ['desk', 'lamp']}\n",
+    "        \n",
     "        self.setup()\n",
     "        \n",
     "    # =================================================================================== \n",
     "    def setup(self):\n",
     "        # set up the robot with basic affordances\n",
     "        self.robot_node = self.add_robot()\n",
-    "        #pass\n",
+    "        \n",
     "        # Rio Note: Not adding robot affordances because we abstract movement to a simple 'go'\n",
     "        #for affordance in ['left', 'right', 'ahead', 'back', 'up', 'down', 'crouch', 'stand']:\n",
     "        #    self.add_affordance(self.robot_node, affordance)\n",
@@ -82,7 +84,7 @@
     "    \n",
     "    # =================================================================================== \n",
     "    def from_pickle(self, filename):\n",
-    "        self = nx.read_gpickle(filename)            \n",
+    "        self = nx.read_gpickle(filename)  \n",
     "        self.init_word_vec()\n",
     "        return self\n",
     "    \n",
@@ -94,7 +96,7 @@
     "    def add_robot(self, **kwargs):\n",
     "        x = self.word2vec('robot') \n",
     "                \n",
-    "        self.add_node(self.node_counter, x=x, node_type='robot', **kwargs)                                        \n",
+    "        self.add_node(self.node_counter, x=x, node_type='robot', text='robot', **kwargs)                                        \n",
     "        self.node_counter += 1                                \n",
     "        return self.node_counter-1\n",
     "    # =================================================================================== \n",
@@ -107,16 +109,17 @@
     "        else:\n",
     "            if word in self._translate_unknown_words:\n",
     "                word_set = self._translate_unknown_words[word]\n",
-    "                representations = self.get_word_vec(word_set, True)\n",
-    "                representation = torch.mean(representations, dim=0)\n",
+    "                representation = self.get_word_vec(word_set, True)\n",
+    "                if len(representation.shape) > 1:\n",
+    "                    representation = torch.mean(representation, dim=0)\n",
     "            else:\n",
     "                #representation = self._word_vec.get_vecs_by_tokens(word, True).numpy()\n",
-    "                representation = self.get_word_vec(word, True).numpy()\n",
-    "\n",
-    "            if not np.sum(np.abs(representation)) > 0:\n",
+    "                representation = self.get_word_vec(word, True)\n",
+    "            \n",
+    "            if not torch.sum(torch.abs(representation)) > 0:\n",
     "                print('zero word: %s' % word)\n",
     "\n",
-    "            return representation\n",
+    "            return representation.numpy()\n",
     "        \n",
     "    # ===================================================================================\n",
     "    def add_object(self, x, obj=None, **kwargs):\n",
